For the acid, the mass in the Arctic soil was so low that the flows related to it where causing small instabilities in the Excel and R solvers. For this reason a 100 ton emission to arctic soil was introduced for verification purposes.

--- a/vignettes/Development/Quality control/Molecular_verification_acid.Rmd
+++ b/vignettes/Development/Quality control/Molecular_verification_acid.Rmd
@@ -415,7 +415,7 @@ library(stringi)
 
 World$NewSolver("SteadyStateSolver")
 
-emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU","sAU"), Emis = c(10000, 10000, 10000,100)) # convert 1 t/y to si units: kg/s
+emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU","s1AU"), Emis = c(10000, 10000, 10000,100)) # convert 1 t/y to si units: kg/s
 
 MW <- World$fetchData("MW")
 
@@ -622,7 +622,7 @@ library(stringi)
 
 World$NewSolver("SteadyStateSolver")
 
-emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU"), Emis = c(10000, 10000, 10000)) # convert 1 t/y to si units: kg/s
+emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU","s1AU"), Emis = c(10000, 10000, 10000,100)) # convert 1 t/y to si units: kg/s
 
 MW <- World$fetchData("MW")
 
